<resources>
    <string name="app_name">PlanIt</string>
    <string name="user_avatar">User</string>
    <string name="text_jobs">Jobs</string>
    <string name="text_calendar">Calendar</string>
    <string name="job_title">Job Title</string>
    <string name="job_subtitle">Job Subtitle</string>
    <string name="employer">Employer</string>
    <string name="add_job">Add Job</string>
    <string name="color_hex_code">Color (Hex code)</string>
    <string name="location">Location</string>
    <string name="color">Color</string>
    <string name="date">Date (YYYY-MM-DD)</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add_shift">Add Shift</string>
    <string name="add_expense">Expense</string>
    <string name="pay_rate">Pay Rate</string>
    <string name="dollar">$</string>
    <string name="channel_name">dailyNotif</string>
    <string name="channel_description">daily notifications</string>
    <string name="shared">Shared</string>
    <string name="shared_title">Shared Title</string>
    <string name="sharedPeople">X members</string>
    <string name="sharing">Sharing</string>
    <string name="budget">Budget</string>
    <string name="select_jobs">Select Events</string>
    <string name="leftarrow">LeftArrow</string>
    <string name="rightarrow">RightArrow</string>
    <string name="events">Events</string>
    <string name="add_event">Event</string>
    <string name="expenses">Expenses</string>
    <string name="dismiss_alarm">Dismiss Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="textview">TextView</string>
    <string name="test">test</string>
    <string name="categories">Categories</string>
    <string name="enjoyment">Enjoyment</string>
    <string name="financial_summary">Financial Summary</string>
    <string name="food">FOOD</string>
    <string name="shopping">SHOPPING</string>
    <string name="traveling">TRAVELING</string>
    <string name="update_budget">Update Budget</string>
    <string name="calendar_recyclerview">calendarRecyclerView</string>
    <string name="entertainment_expenses">Entertainment Expenses</string>
    <string name="set_budget">Set Budget</string>
    <string name="entertainment_recyclerview">Entertainment RecyclerView</string>
    <string name="financial_summary_recyclerview">Financial Summary RecyclerView</string>
    <string name="total_expenses_0_00">Total Expenses: $0.00</string>
    <string name="total_net_pay_0_00">Total Net Pay: $0.00</string>
    <string name="food_expenses">Food Expenses</string>
    <string name="food_recyclerview">Food RecyclerView</string>
    <string name="job_events_recyclerview">Job Events RecyclerView</string>
    <string name="job_expenses_recyclerview">Job Expenses RecyclerView</string>
    <string name="monthly_summary">Monthly Summary</string>
    <string name="total_earnings_0_00">Total Earnings: $0.00</string>
    <string name="previous_month">Previous Month</string>
    <string name="april_2025">April 2025</string>
    <string name="job_details">Job Details</string>
    <string name="net_income_0_00">Net Income: $0.00</string>
    <string name="next_month">Next Month</string>
    <string name="summary_recyclerview">Summary RecyclerView</string>
    <string name="email">Email</string>
    <string name="get_started">Get Started</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="welcome_to_planit">Welcome to PlanIT!</string>
    <string name="create">Create</string>
    <string name="calendar_name">Calendar Name</string>
    <string name="add_events">Add Events</string>
    <string name="edit">Edit</string>
    <string name="join_code">Join code</string>
    <string name="join">Join</string>
    <string name="enter_join_code">Enter Join Code</string>
    <string name="create_new">Create New</string>
    <string name="join_calendar">Join Calendar</string>
    <string name="your_shared_calendars">Your Shared Calendars</string>
    <string name="shared_calendar_recyclerview">Shared Calendar RecyclerView</string>
    <string name="shopping_expenses">Shopping Expenses</string>
    <string name="shopping_recyclerview">Shopping RecyclerView</string>
    <string name="traveling_expenses">Traveling Expenses</string>
    <string name="traveling_recyclerview">Traveling RecyclerView</string>
    <string name="day">Day</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="set_alarm">Set Alarm:</string>
    <string name="repeat">Repeat</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="no_repeat">No repeat</string>
    <string name="no_date_selected">No date selected</string>
    <string name="no_start_time_selected">No start time selected</string>
    <string name="no_end_time_selected">No end time selected</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date_range">Date Range</string>
    <string name="delete_event">Delete event</string>
    <string name="time_range">Time Range</string>
    <string name="additional_info">Additional Info</string>
    <string name="repeat_info">Repeat Info</string>
    <string name="delete_expense">Delete expense</string>
    <string name="delete_job">Delete job</string>
    <string name="hours">Hours: </string>
    <string name="_0_0">0.0</string>
    <string name="pay_rate_money">Pay Rate: $</string>
    <string name="earnings">Earnings: $</string>
    <string name="expenses_money">Expenses: $</string>
    <string name="expense_details">Expense Details:</string>
    <string name="expense_name">Expense Name</string>
    <string name="_0_00">$0.00</string>
    <string name="sharing_code">Sharing Code:</string>
    <string name="code">ABC123</string>
</resources>