<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/eventCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    app:strokeWidth="1dp"
    app:strokeColor="#E0E0E0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/eventName"
            android:hint="@string/full_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Date Range -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/eventDateRange"
                android:hint="@string/date_range"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                style="@style/Widget.Material3.Chip.Suggestion"
                app:chipCornerRadius="8dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/eventTimeRange"
                android:hint="@string/time_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                style="@style/Widget.Material3.Chip.Suggestion"
                app:chipCornerRadius="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- Net Pay -->
            <com.google.android.material.chip.Chip
                android:id="@+id/netPay"
                android:text="@string/dollar"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- Repeat Info -->
            <com.google.android.material.chip.Chip
                android:id="@+id/eventRepeatInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textStyle="italic"
                android:hint="@string/repeat"
                android:textSize="12sp"/>

            <ImageButton
                android:id="@+id/eventEditBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:src="@android:drawable/ic_menu_edit"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit" />

            <ImageButton
                android:id="@+id/eventDeleteBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="1dp"
                android:src="@android:drawable/ic_menu_delete"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/delete_event" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>