<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editShiftDate"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="date"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editShiftStartTime"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:hint="@string/start_time"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editShiftEndTime"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:hint="@string/end_time"
            android:inputType="text"
            android:minHeight="48dp" />

    </LinearLayout>
</ScrollView>
